AMC Contract changes + Email Communication changes